--- a/Study/index.html
+++ b/Study/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="exjs.css">
 </head>
 <body>
-    <h1>Study fight</h1>
+    <p id="demo">Study Fight</p>
+    <img id="myImage" src="" style="width:100px">
+    <div class="container">
+        <button class="button btn" type="button" onclick="enbaleCheckDay()">Click me to display Date and Time</button>
+        <button class="button btn" type="button" onclick="printHTML()">Click me to display Title</button>
+        <button class="button btn" type="button" onclick="changeFontSize()">Change font size</button>
+        <button class="button btn" type="button" onclick="changeFontColor()">Change font color</button>
+        <button class="button btn" type="button" onclick="changeFontFamily()">Change font family</button>
+    </div>
     <script src="study.js"></script>
 </body>
 </html>
